# Podlesnov_KR4_

./: README.md  main.py  pyproject.toml
src/: api_hh.py  jsonsaver.py  utils.py
tests/: test_abc.py  test_vacancy.py
